Overflow issues in phone

--- a/Spotify/rightside.css
+++ b/Spotify/rightside.css
@@ -25,6 +25,7 @@
 @media screen and (max-width:650px) {
     .container .firstrightpart {
         width: 250%;
+        overflow: scroll;
     }
 }
 
